fixed overlapping issue on homepage with go to profile button

--- a/css/home.css
+++ b/css/home.css
@@ -366,10 +366,11 @@
 /* profile */
 
 .profile-peek {
-  display: flex;
-  align-items: center;
-  gap: var(--sp-3);
-  margin-bottom: var(--sp-4);
+  flex-wrap: wrap;
+}
+
+.profile-peek .btn {
+  flex: 1 0 100%;
 }
 
 .profile-peek__avatar {
